--- a/BowKad_DM2.Rmd
+++ b/BowKad_DM2.Rmd
@@ -66,10 +66,11 @@ avg_board = capmetro %>%
 
 #plot data
 
-ggplot(avg_board) +
+avgBoardings = ggplot(avg_board) +
   geom_line(aes(x = hour_of_day, y = avg_pass, col = month)) + 
   facet_wrap(~day_of_week) + ggtitle("Average Boardings") +
   xlab("Average Passengers") + ylab("Hour of Day")
+avgBoardings
   
 ```
 Caption: The plot above displays average boardings of Capital Metro buses on the UT campus, averaged by hour of day, broken down by month (September, October, November) and finally faceted by day of the week, and finally by month (September, October, November). In general, the hour of peak boardings fluctuates between 3PM and 5:30PM across weekdays.
@@ -83,10 +84,11 @@ knitr::opts_chunk$set(echo = F)
 
 #plot data
 
-ggplot(capmetro) +
+avg_temp = ggplot(capmetro) +
   geom_point(aes(x=temperature, y = boarding, col = weekend), size = .05) +
   facet_wrap(~hour_of_day) + ggtitle("Average Boardings by Temperature") +
   xlab("Temperature") + ylab("Boardings")
+avg_temp
 ```
 Caption: The plot above shows boardings of Capital Metro buses in each 15-mimnute window, by temperature, faceted by hour of day. Red and cyan points correspond to data from weekdays and weekends, respectively.
 
@@ -232,9 +234,10 @@ credHistory = kredit%>%
   summarise(numDefault = sum(Default), count = n()) %>%
   mutate(default_liklihood = numDefault/count)
 
-ggplot(credHistory)+
+credit_ratio = ggplot(credHistory)+
   geom_col(aes(x = history, y = default_liklihood)) + ggtitle("Default Likelihood by Credit History") +
   xlab("Credit History") + ylab("Default Likelihood")
+credit_ratio
 ```
 The bar plot above displays the proportion of total of defaults for three credit history classes, “good”, “poor”, and “terrible”. Intuitively, we would expect that a worse credit history corresponds to a higher default rate. Surprisingly, we observe the exact opposite of this relationship. Borrowers with good credit history exhibit the highest default rate, whereas those with terrible credit history exhibit the lowest default rate of the three categories. This counterintuitive result likely stems from how to dataset was constructed. As defaults are overall rather rare, the German bank whose data we analyzed decided to sampled a set of loans that had defaulted, and attempted to match this set with similar loans that had not defaulted.
 ```{r #3-a, include=TRUE}
@@ -268,7 +271,7 @@ newcol <- c('True Negative', 'False Negative', 'False Positive', 'True Positive'
 nct <- cbind(confusiontable, newcol)
 nct %>%
   rename(Frequency = Freq, Result = newcol)
-
+nct
 ```
 The set of loans that defaulted probably had a higher-than-average proportion of loans with terrible credit history. Because this sample had many more loans, it likely also had a broader set of characteristics allowing matching with sample loans that did not default. The list of loans with good credit history that defaulted, was much smaller, (as individuals with good credit history do not often default on their loans) and thus did was less likely to match with loans that did not default. Hence by matching loans in such a way, the bank unintentionally generated an inverse relationship between credit history and default likelihood. The bank should thus change its sampling scheme. For example, random sampling of loans would provide a better set of data, as it would be a more accurate representation of the overall portfolio.
 
@@ -425,11 +428,11 @@ roc_curve_child = foreach(thresh = thresh_grid, .combine='rbind') %do% {
   rbind(out_logit)
 } %>% as.data.frame()
 
-ggplot(roc_curve_child) + 
+roc = ggplot(roc_curve_child) + 
   geom_line(aes(x=FPR, y=TPR)) + 
   labs(title="ROC Legit Lasso") +
   theme_bw(base_size = 10)
-
+roc
 
 ```
 ## 4-b
